syntax = "proto3";

package accelbyte.gdpr.registered.v1;
// Version 1.0.0

option csharp_namespace = "Accelbyte.Gdpr.Registered.V1";
option go_package = "accelbyte.net/gdpr/registered_v1";
option java_multiple_files = true;
option java_package = "net.accelbyte.gdpr.registered.v1";
option java_outer_classname = "gdprProto";

service GDPR {

  /**
   Data Generation.
   The generated data will be uploaded into GDPR Service storage.
   */
  rpc DataGeneration(DataGenerationRequest) returns (DataGenerationResponse) {};

  /**
   Data Deletion.
   */
  rpc DataDeletion(DataDeletionRequest) returns (DataDeletionResponse) {};

}

message DataGenerationRequest {
  string namespace = 1; // namespace of user
  string userId = 2; // user id
  string uploadUrl = 3; // upload url that used to upload the generated file into GDPR Service storage
}

message DataGenerationResponse {
  bool success = 1; // indicate data generation was success
  string message = 2; // message from data generation process
}

message DataDeletionRequest {
  string namespace = 1; // namespace of user
  string userId = 2; // user id
}

message DataDeletionResponse {
  bool success = 1; // indicate data deletion was success
  string message = 2; // message from data deletion process
}